@@ -27,6 +27,8 @@ srcreadme         = mkdn
 ; version_rel_time_zone = Pacific/Auckland
 twitter_hash_tags = #perl #cpan
 ; auto_prereqs_skip = File::Find
+Test::Compile::PerFile.:version = 0.003902
+Test::Compile::PerFile.test_template = 02-raw-require.t.tpl
 
 
 [Prereqs]
