@@ -1,6 +1,16 @@
 Release history for Dist-Zilla-Plugin-Git-NextVersion-Sanitized
 
 {{$NEXT}}
+ [Bugfix]
+ - Avoid test failures on 5.26 w/ -Ddefault_inc_excludes_dot
+ - Closes https://github.com/kentnl/Dist-Zilla-Plugin-Git-NextVersion-Sanitized/issues/2
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.002002, see misc/*.deps* for details
+ - configure: +1 (recommends: ↑1)
+ - develop: +14 ↑4 -3 (recommends: +1, suggests: ↑2)
+ - runtime: (recommends: +1)
+ - test: +1 ↓1 (recommends: ↑1 ↓1)
 
 0.002002 2014-09-01T01:07:22Z
  [00 Minor]
@@ -58,4 +68,3 @@ Release history for Dist-Zilla-Plugin-Git-NextVersion-Sanitized
 
 0.001000 2013-12-01T10:42:14Z
  - First version.
-
